# tracey

./: CMakeLists.txt  README.md  main.c
include/: debug_assert.h  image.h  types.h
include/graphics/: camera.h  color.h  ray.h  scene.h  shape.h
include/io/: image.h
include/math/: interval.h  ray.h  vec.h
include/util/: glist.h
src/: image.c
src/graphics/: camera.c  color.c  ray.c  scene.c  shape.c
src/io/: image.c  io.c
src/math/: interval.c  ray.c  vec.c
